featï: completion istio delpoy demo